# HHW_brick

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  MANIFEST.in  MKDOCS_DEPLOYMENT_GUIDE.md  README.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sitemap.xml
.github/workflows/: docs.yml  publish.yml  test.yml
APP_DEVELOPER_GUIDE/: index.html
CONVERSION_COMPLETE/: index.html
DOCUMENTATION_PROGRESS/: index.html
PARALLEL_PROCESSING/: index.html
SIMPLIFIED_ROADMAP/: index.html
api-reference/: index.html
app-development/: index.html
app-development/step-01-structure/: index.html
app-development/step-02-load-config/: index.html
app-development/step-03-sparql-qualify/: index.html
app-development/step-04-analyze-part1/: index.html
app-development/step-05-analyze-part2/: index.html
app-development/step-06-visualization-matplotlib/: index.html
app-development/step-07-visualization-plotly/: index.html
app-development/step-08-testing/: index.html
app-development/step-09-deployment/: index.html
application-development-guide/: index.html
application-development-guide/step-01-structure/: index.html
application-development-guide/step-02-load-config/: index.html
application-development-guide/step-03-sparql-qualify/: index.html
application-development-guide/step-04-analyze-part1/: index.html
application-development-guide/step-05-analyze-part2/: index.html
application-development-guide/step-06-visualization-matplotlib/: index.html
application-development-guide/step-07-visualization-plotly/: index.html
application-development-guide/step-08-testing/: index.html
application-development-guide/step-09-deployment/: index.html
apps/: index.html
apps/primary-loop/: index.html
apps/secondary-loop/: index.html
changelog/: index.html
developer-guide/: index.html
developer-guide/application-development-guide/: index.html
developer-guide/application-development-guide/step-01-structure/: index.html
developer-guide/application-development-guide/step-02-load-config/: index.html
developer-guide/application-development-guide/step-03-sparql-qualify/: index.html
developer-guide/application-development-guide/step-04-analyze-part1/: index.html
developer-guide/application-development-guide/step-05-analyze-part2/: index.html
developer-guide/application-development-guide/step-06-visualization-matplotlib/: index.html
developer-guide/creating-applications/: index.html
developer-guide/tutorial/: index.html
docs/: APP_DEVELOPER_GUIDE.md  CONVERSION_COMPLETE.md  DOCUMENTATION_PROGRESS.md  PARALLEL_PROCESSING.md  README.md  SIMPLIFIED_ROADMAP.md  changelog.md  documentation-map.md  index.md  license.md  port_configuration_guide.md
docs/api-reference/: index.md
docs/app-development/: index.md  step-03-sparql-qualify.md  step-06-visualization-matplotlib.md
docs/application-development-guide/: index.md  step-01-structure.md  step-03-sparql-qualify.md  step-04-analyze-part1.md  step-05-analyze-part2.md
docs/apps/: index.md  primary-loop.md  secondary-loop.md
docs/developer-guide/: README.md  creating-applications.md  index.md
docs/examples/: 01-convert-csv-to-brick.md  02-ontology-validation.md  03-point-count-validation.md  04-equipment-count-validation.md  05-subgraph-pattern-matching.md  06-application-management.md  07-run-application.md  08-batch-run-application.md  index.md
docs/getting-started/: csv-format.md  index.md  installation.md  quick-start.md  understanding-brick.md
docs/javascripts/: extra.js
docs/stylesheets/: extra.css
docs/tutorials/: 01_hello_world_app.md  index.md
docs/user-guide/: conversion_method_comparison.md  index.md  plotly-visualization-cn.md  plotly-visualization.md
documentation-map/: index.html
examples/: 01_convert_csv_to_brick.py  02_ontology_validation.py  03_point_count_validation.py  04_equipment_count_validation.py  05_subgraph_pattern_matching.py  06_application_management.py  07_run_application.py  08_batch_run_application.py  README.md  index.html
examples/01-convert-csv-to-brick/: index.html
examples/02-ontology-validation/: index.html
examples/03-point-count-validation/: index.html
examples/04-equipment-count-validation/: index.html
examples/05-subgraph-pattern-matching/: index.html
examples/06-application-management/: index.html
examples/07-run-application/: index.html
examples/08-batch-run-application/: index.html
faq/: index.html
getting-started/: index.html
getting-started/csv-format/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
getting-started/understanding-brick/: index.html
hhw_brick/: __init__.py  deployment.py
hhw_brick/applications/: __init__.py  apps_manager.py
hhw_brick/cli/: __init__.py  main.py
hhw_brick/conversion/: __init__.py  batch_converter.py  csv_to_brick.py  sensor_to_brick_mapping.yaml
hhw_brick/utils/: __init__.py  brick_query.py  config.py  file_utils.py  logger.py  testbed.py
hhw_brick/validation/: Brick_Self.ttl  __init__.py  ground_truth_calculator.py  subgraph_pattern_validator.py  validator.py
javascripts/: extra.js
license/: index.html
port_configuration_guide/: index.html
scripts/: README.md  draw_subgraph_patterns.py  visualize_brick_models.py
search/: search_index.json
stylesheets/: extra.css
tests/: README.md  __init__.py  conftest.py  test_applications.py  test_cli.py  test_cli_extended.py  test_conversion.py  test_conversion_extended.py  test_imports.py  test_utils.py  test_utils_extended.py  test_validation.py
tests/fixtures/: ground_truth.csv  metadata.csv  secondary_loop_temp_diff_config.yaml  vars_available_by_building.csv
tutorials/: index.html
tutorials/01_hello_world_app/: index.html
user-guide/: index.html
user-guide/applications/: index.html
user-guide/conversion/: index.html
user-guide/conversion_method_comparison/: index.html
user-guide/plotly-visualization/: index.html
user-guide/plotly-visualization-cn/: index.html
user-guide/validation/: index.html
(+80 files in other folders)
